--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1296,6 +1296,9 @@ video {
 }.text-neutral-900 {
   --tw-text-opacity: 1;
   color: rgb(23 23 23 / var(--tw-text-opacity));
+}.text-red-400 {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
