--- a/public/css/app.css
+++ b/public/css/app.css
@@ -453,6 +453,23 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+}.container {
+  width: 100%;
+}@media (min-width: 640px) {.container {
+    max-width: 640px;
+  }
+}@media (min-width: 768px) {.container {
+    max-width: 768px;
+  }
+}@media (min-width: 1024px) {.container {
+    max-width: 1024px;
+  }
+}@media (min-width: 1280px) {.container {
+    max-width: 1280px;
+  }
+}@media (min-width: 1536px) {.container {
+    max-width: 1536px;
+  }
 }.sr-only {
   position: absolute;
   width: 1px;
@@ -473,6 +490,8 @@ video {
   position: absolute;
 }.relative {
   position: relative;
+}.sticky {
+  position: sticky;
 }.inset-0 {
   top: 0px;
   right: 0px;
@@ -481,6 +500,9 @@ video {
 }.inset-y-0 {
   top: 0px;
   bottom: 0px;
+}.inset-x-0 {
+  left: 0px;
+  right: 0px;
 }.top-3 {
   top: 0.75rem;
 }.top-3\.5 {
@@ -491,14 +513,20 @@ video {
   right: 0px;
 }.left-0 {
   left: 0px;
+}.-right-40 {
+  right: -10rem;
 }.z-0 {
   z-index: 0;
 }.z-10 {
   z-index: 10;
 }.z-50 {
   z-index: 50;
+}.z-30 {
+  z-index: 30;
 }.col-span-4 {
   grid-column: span 4 / span 4;
+}.float-left {
+  float: left;
 }.m-0 {
   margin: 0px;
 }.-mx-3 {
@@ -572,6 +600,20 @@ video {
   margin-top: 0.25rem;
 }.-mr-2 {
   margin-right: -0.5rem;
+}.mr-1 {
+  margin-right: 0.25rem;
+}.mt-32 {
+  margin-top: 8rem;
+}.mb-0\.5 {
+  margin-bottom: 0.125rem;
+}.-ml-12 {
+  margin-left: -3rem;
+}.-mr-32 {
+  margin-right: -8rem;
+}.-ml-16 {
+  margin-left: -4rem;
+}.mr-6 {
+  margin-right: 1.5rem;
 }.block {
   display: block;
 }.inline-block {
@@ -646,6 +688,12 @@ video {
   width: 12rem;
 }.w-6 {
   width: 1.5rem;
+}.w-10 {
+  width: 2.5rem;
+}.w-3\/5 {
+  width: 60%;
+}.w-8\/12 {
+  width: 66.666667%;
 }.min-w-0 {
   min-width: 0px;
 }.max-w-full {
@@ -662,8 +710,12 @@ video {
   flex: 1 1 auto;
 }.flex-none {
   flex: none;
+}.flex-shrink-0 {
+  flex-shrink: 0;
 }.shrink-0 {
   flex-shrink: 0;
+}.flex-grow {
+  flex-grow: 1;
 }.grow {
   flex-grow: 1;
 }.basis-1\/12 {
@@ -704,6 +756,10 @@ video {
   cursor: default;
 }.cursor-pointer {
   cursor: pointer;
+}.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }.list-decimal {
   list-style-type: decimal;
 }.list-none {
@@ -789,6 +845,11 @@ video {
 }.rounded-t-2xl {
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
+}.rounded-b-2xl {
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}.rounded-bl-xl {
+  border-bottom-left-radius: 0.75rem;
 }.border {
   border-width: 1px;
 }.border-0 {
@@ -807,6 +868,8 @@ video {
   border-right-width: 1px;
 }.border-l-4 {
   border-left-width: 4px;
+}.border-t-0 {
+  border-top-width: 0px;
 }.border-solid {
   border-style: solid;
 }.border-dashed {
@@ -834,6 +897,9 @@ video {
 }.border-gray-100 {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}.border-fuchsia-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(217 70 239 / var(--tw-border-opacity));
 }.border-b-transparent {
   border-bottom-color: transparent;
 }.bg-white {
@@ -864,10 +930,19 @@ video {
 }.bg-indigo-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
+}.bg-white\/80 {
+  background-color: rgb(255 255 255 / 0.8);
+}.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}.bg-slate-800\/10 {
+  background-color: rgb(30 41 59 / 0.1);
 }.bg-gradient-to-tl {
   background-image: linear-gradient(to top left, var(--tw-gradient-stops));
 }.bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}.bg-none {
+  background-image: none;
 }.from-slate-600 {
   --tw-gradient-from: #475569;
   --tw-gradient-to: rgb(71 85 105 / 0);
@@ -907,6 +982,10 @@ video {
   --tw-gradient-to: #ec4899;
 }.to-transparent {
   --tw-gradient-to: transparent;
+}.bg-cover {
+  background-size: cover;
+}.bg-contain {
+  background-size: contain;
 }.bg-clip-border {
   background-clip: border-box;
 }.bg-clip-padding {
@@ -916,6 +995,10 @@ video {
           background-clip: text;
 }.bg-center {
   background-position: center;
+}.bg-left {
+  background-position: left;
+}.bg-no-repeat {
+  background-repeat: no-repeat;
 }.fill-current {
   fill: currentColor;
 }.stroke-0 {
@@ -1027,12 +1110,18 @@ video {
   padding-top: 0.5rem;
 }.pb-3 {
   padding-bottom: 0.75rem;
+}.pl-6 {
+  padding-left: 1.5rem;
+}.pl-12 {
+  padding-left: 3rem;
 }.text-left {
   text-align: left;
 }.text-center {
   text-align: center;
 }.text-right {
   text-align: right;
+}.text-start {
+  text-align: start;
 }.align-baseline {
   vertical-align: baseline;
 }.align-top {
@@ -1159,6 +1248,9 @@ video {
 }.text-indigo-700 {
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
+}.text-fuchsia-500 {
+  --tw-text-opacity: 1;
+  color: rgb(217 70 239 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
@@ -1217,6 +1309,14 @@ video {
   --tw-ring-opacity: 0.05;
 }.filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}.backdrop-blur-2xl {
+  --tw-backdrop-blur: blur(40px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}.backdrop-saturate-200 {
+  --tw-backdrop-saturate: saturate(2);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }.transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1243,6 +1343,8 @@ video {
   transition-duration: 300ms;
 }.duration-75 {
   transition-duration: 75ms;
+}.duration-500 {
+  transition-duration: 500ms;
 }.ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }.ease-out {
@@ -1268,6 +1370,41 @@ video {
 }.before\:content-\[\'\/\'\]::before {
   --tw-content: '/';
   content: var(--tw-content);
+}.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}.after\:top-px::after {
+  content: var(--tw-content);
+  top: 1px;
+}.after\:h-4::after {
+  content: var(--tw-content);
+  height: 1rem;
+}.after\:w-4::after {
+  content: var(--tw-content);
+  width: 1rem;
+}.after\:translate-x-px::after {
+  content: var(--tw-content);
+  --tw-translate-x: 1px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.after\:bg-white::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}.after\:content-\[\'\'\]::after {
+  --tw-content: '';
+  content: var(--tw-content);
+}.checked\:border-slate-800\/95:checked {
+  border-color: rgb(30 41 59 / 0.95);
+}.checked\:bg-slate-800\/95:checked {
+  background-color: rgb(30 41 59 / 0.95);
+}.checked\:bg-none:checked {
+  background-image: none;
+}.checked\:bg-right:checked {
+  background-position: right;
+}.checked\:after\:translate-x-5:checked::after {
+  content: var(--tw-content);
+  --tw-translate-x: 1.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -1275,6 +1412,9 @@ video {
 }.hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}.hover\:border-fuchsia-500:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(217 70 239 / var(--tw-border-opacity));
 }.hover\:bg-white\/30:hover {
   background-color: rgb(255 255 255 / 0.3);
 }.hover\:bg-gray-700:hover {
@@ -1289,6 +1429,8 @@ video {
 }.hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}.hover\:bg-transparent:hover {
+  background-color: transparent;
 }.hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1304,6 +1446,15 @@ video {
 }.hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
+}.hover\:text-fuchsia-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(217 70 239 / var(--tw-text-opacity));
+}.hover\:opacity-75:hover {
+  opacity: 0.75;
+}.hover\:shadow-none:hover {
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.focus\:z-10:focus {
   z-index: 10;
 }.focus\:border-blue-300:focus {
@@ -1368,6 +1519,13 @@ video {
   transition-property: box-shadow;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}.active\:scale-100:active {
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.active\:border-fuchsia-500:active {
+  --tw-border-opacity: 1;
+  border-color: rgb(217 70 239 / var(--tw-border-opacity));
 }.active\:bg-gray-100:active {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1377,12 +1535,32 @@ video {
 }.active\:bg-red-700:active {
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}.active\:bg-fuchsia-500:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 70 239 / var(--tw-bg-opacity));
 }.active\:text-gray-700:active {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }.active\:text-gray-500:active {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}.active\:text-white:active {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}.active\:hover\:border-fuchsia-500:hover:active {
+  --tw-border-opacity: 1;
+  border-color: rgb(217 70 239 / var(--tw-border-opacity));
+}.active\:hover\:bg-transparent:hover:active {
+  background-color: transparent;
+}.active\:hover\:text-fuchsia-500:hover:active {
+  --tw-text-opacity: 1;
+  color: rgb(217 70 239 / var(--tw-text-opacity));
+}.active\:hover\:opacity-75:hover:active {
+  opacity: 0.75;
+}.active\:hover\:shadow-none:hover:active {
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.disabled\:opacity-25:disabled {
   opacity: 0.25;
 }@media (prefers-color-scheme: dark) {.dark\:bg-gray-900 {
@@ -1407,6 +1585,8 @@ video {
     margin-left: 2.5rem;
   }.sm\:ml-6 {
     margin-left: 1.5rem;
+  }.sm\:mb-0 {
+    margin-bottom: 0px;
   }.sm\:inline {
     display: inline;
   }.sm\:flex {
@@ -1469,6 +1649,8 @@ video {
     margin-left: auto;
   }.md\:mr-0 {
     margin-right: 0px;
+  }.md\:block {
+    display: block;
   }.md\:flex {
     display: flex;
   }.md\:w-6\/12 {
@@ -1493,12 +1675,20 @@ video {
     grid-column: span 12 / span 12;
   }.lg\:mb-0 {
     margin-bottom: 0px;
+  }.lg\:ml-0 {
+    margin-left: 0px;
+  }.lg\:block {
+    display: block;
   }.lg\:flex {
     display: flex;
+  }.lg\:hidden {
+    display: none;
   }.lg\:w-5\/12 {
     width: 41.666667%;
   }.lg\:w-1\/2 {
     width: 50%;
+  }.lg\:w-8\/12 {
+    width: 66.666667%;
   }.lg\:flex-none {
     flex: none;
   }.lg\:basis-auto {
@@ -1507,6 +1697,8 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }.lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }.lg\:flex-row {
+    flex-direction: row;
   }.lg\:flex-nowrap {
     flex-wrap: nowrap;
   }.lg\:justify-start {
@@ -1518,6 +1710,9 @@ video {
   }.lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }.lg\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }.lg\:text-left {
     text-align: left;
   }
@@ -1527,6 +1722,10 @@ video {
     grid-column: span 4 / span 4;
   }.xl\:mb-0 {
     margin-bottom: 0px;
+  }.xl\:ml-auto {
+    margin-left: auto;
+  }.xl\:mr-12 {
+    margin-right: 3rem;
   }.xl\:hidden {
     display: none;
   }.xl\:w-4\/12 {
