--- a/public/css/app.css
+++ b/public/css/app.css
@@ -507,12 +507,12 @@ video {
   top: 0.75rem;
 }.top-3\.5 {
   top: 0.875rem;
-}.top-0 {
-  top: 0px;
-}.right-0 {
-  right: 0px;
 }.left-0 {
   left: 0px;
+}.right-0 {
+  right: 0px;
+}.top-0 {
+  top: 0px;
 }.-right-40 {
   right: -10rem;
 }.z-0 {
@@ -529,15 +529,15 @@ video {
   float: left;
 }.m-0 {
   margin: 0px;
+}.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }.-mx-3 {
   margin-left: -0.75rem;
   margin-right: -0.75rem;
 }.my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
-}.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }.my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -596,12 +596,6 @@ video {
   margin-top: 0.125rem;
 }.mr-12 {
   margin-right: 3rem;
-}.mt-1 {
-  margin-top: 0.25rem;
-}.-mr-2 {
-  margin-right: -0.5rem;
-}.mr-1 {
-  margin-right: 0.25rem;
 }.mt-32 {
   margin-top: 8rem;
 }.mb-0\.5 {
@@ -612,8 +606,12 @@ video {
   margin-right: -8rem;
 }.-ml-16 {
   margin-left: -4rem;
-}.mr-6 {
-  margin-right: 1.5rem;
+}.mt-1 {
+  margin-top: 0.25rem;
+}.-mr-2 {
+  margin-right: -0.5rem;
+}.mr-3 {
+  margin-right: 0.75rem;
 }.block {
   display: block;
 }.inline-block {
@@ -676,6 +674,8 @@ video {
   width: 83.333333%;
 }.w-2\/3 {
   width: 66.666667%;
+}.w-48 {
+  width: 12rem;
 }.w-8 {
   width: 2rem;
 }.w-auto {
@@ -684,34 +684,30 @@ video {
   width: 1rem;
 }.w-20 {
   width: 5rem;
-}.w-48 {
-  width: 12rem;
-}.w-6 {
-  width: 1.5rem;
 }.w-10 {
   width: 2.5rem;
 }.w-3\/5 {
   width: 60%;
 }.w-8\/12 {
   width: 66.666667%;
+}.w-6 {
+  width: 1.5rem;
 }.min-w-0 {
   min-width: 0px;
+}.max-w-7xl {
+  max-width: 80rem;
 }.max-w-full {
   max-width: 100%;
 }.max-w-xl {
   max-width: 36rem;
 }.max-w-6xl {
   max-width: 72rem;
-}.max-w-7xl {
-  max-width: 80rem;
 }.flex-1 {
   flex: 1 1 0%;
 }.flex-auto {
   flex: 1 1 auto;
 }.flex-none {
   flex: none;
-}.flex-shrink-0 {
-  flex-shrink: 0;
 }.shrink-0 {
   flex-shrink: 0;
 }.flex-grow {
@@ -854,6 +850,8 @@ video {
   border-width: 1px;
 }.border-0 {
   border-width: 0px;
+}.border-2 {
+  border-width: 2px;
 }.border-b {
   border-bottom-width: 1px;
 }.border-b-0 {
@@ -862,12 +860,12 @@ video {
   border-bottom-width: 2px;
 }.border-b-\[1px\] {
   border-bottom-width: 1px;
+}.border-l-4 {
+  border-left-width: 4px;
 }.border-t {
   border-top-width: 1px;
 }.border-r {
   border-right-width: 1px;
-}.border-l-4 {
-  border-left-width: 4px;
 }.border-t-0 {
   border-top-width: 0px;
 }.border-solid {
@@ -888,18 +886,21 @@ video {
 }.border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }.border-indigo-400 {
   --tw-border-opacity: 1;
   border-color: rgb(129 140 248 / var(--tw-border-opacity));
-}.border-gray-100 {
+}.border-gray-400 {
   --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }.border-fuchsia-500 {
   --tw-border-opacity: 1;
   border-color: rgb(217 70 239 / var(--tw-border-opacity));
+}.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }.border-b-transparent {
   border-bottom-color: transparent;
 }.bg-white {
@@ -907,11 +908,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }.bg-transparent {
   background-color: transparent;
-}.bg-white\/20 {
-  background-color: rgb(255 255 255 / 0.2);
 }.bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}.bg-white\/20 {
+  background-color: rgb(255 255 255 / 0.2);
+}.bg-indigo-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 242 255 / var(--tw-bg-opacity));
 }.bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -921,22 +925,16 @@ video {
 }.bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}.bg-white\/80 {
+  background-color: rgb(255 255 255 / 0.8);
+}.bg-slate-800\/10 {
+  background-color: rgb(30 41 59 / 0.1);
 }.bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }.bg-gray-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}.bg-indigo-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 242 255 / var(--tw-bg-opacity));
-}.bg-white\/80 {
-  background-color: rgb(255 255 255 / 0.8);
-}.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}.bg-slate-800\/10 {
-  background-color: rgb(30 41 59 / 0.1);
 }.bg-gradient-to-tl {
   background-image: linear-gradient(to top left, var(--tw-gradient-stops));
 }.bg-gradient-to-r {
@@ -1045,6 +1043,9 @@ video {
 }.px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }.px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -1060,18 +1061,15 @@ video {
 }.py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
 }.px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }.pl-2 {
   padding-left: 0.5rem;
 }.pr-3 {
@@ -1086,12 +1084,16 @@ video {
   padding-bottom: 0.5rem;
 }.pb-10 {
   padding-bottom: 2.5rem;
+}.pl-3 {
+  padding-left: 0.75rem;
+}.pr-4 {
+  padding-right: 1rem;
 }.pt-8 {
   padding-top: 2rem;
-}.pl-0 {
-  padding-left: 0px;
 }.pt-1 {
   padding-top: 0.25rem;
+}.pl-0 {
+  padding-left: 0px;
 }.pl-4 {
   padding-left: 1rem;
 }.pt-4 {
@@ -1102,18 +1104,14 @@ video {
   padding-right: 0px;
 }.pt-6 {
   padding-top: 1.5rem;
-}.pl-3 {
-  padding-left: 0.75rem;
-}.pr-4 {
-  padding-right: 1rem;
-}.pt-2 {
-  padding-top: 0.5rem;
-}.pb-3 {
-  padding-bottom: 0.75rem;
 }.pl-6 {
   padding-left: 1.5rem;
 }.pl-12 {
   padding-left: 3rem;
+}.pt-2 {
+  padding-top: 0.5rem;
+}.pb-3 {
+  padding-bottom: 0.75rem;
 }.text-left {
   text-align: left;
 }.text-center {
@@ -1218,6 +1216,12 @@ video {
 }.text-\[\#648459\] {
   --tw-text-opacity: 1;
   color: rgb(100 132 89 / var(--tw-text-opacity));
+}.text-indigo-700 {
+  --tw-text-opacity: 1;
+  color: rgb(67 56 202 / var(--tw-text-opacity));
+}.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }.text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -1227,9 +1231,6 @@ video {
 }.text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }.text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
@@ -1239,18 +1240,15 @@ video {
 }.text-green-600 {
   --tw-text-opacity: 1;
   color: rgb(22 163 74 / var(--tw-text-opacity));
-}.text-indigo-600 {
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
-}.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}.text-indigo-700 {
-  --tw-text-opacity: 1;
-  color: rgb(67 56 202 / var(--tw-text-opacity));
 }.text-fuchsia-500 {
   --tw-text-opacity: 1;
   color: rgb(217 70 239 / var(--tw-text-opacity));
+}.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}.text-indigo-600 {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
@@ -1258,14 +1256,14 @@ video {
   -moz-osx-font-smoothing: grayscale;
 }.opacity-70 {
   opacity: 0.7;
+}.opacity-0 {
+  opacity: 0;
+}.opacity-100 {
+  opacity: 1;
 }.opacity-50 {
   opacity: 0.5;
 }.opacity-60 {
   opacity: 0.6;
-}.opacity-100 {
-  opacity: 1;
-}.opacity-0 {
-  opacity: 0;
 }.opacity-75 {
   opacity: 0.75;
 }.shadow-sm {
@@ -1295,6 +1293,9 @@ video {
 }.shadow-transparent {
   --tw-shadow-color: transparent;
   --tw-shadow: var(--tw-shadow-colored);
+}.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }.ring-1 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -1339,10 +1340,10 @@ video {
   transition-duration: 150ms;
 }.duration-200 {
   transition-duration: 200ms;
-}.duration-300 {
-  transition-duration: 300ms;
 }.duration-75 {
   transition-duration: 75ms;
+}.duration-300 {
+  transition-duration: 300ms;
 }.duration-500 {
   transition-duration: 500ms;
 }.ease-in-out {
@@ -1415,40 +1416,46 @@ video {
 }.hover\:border-fuchsia-500:hover {
   --tw-border-opacity: 1;
   border-color: rgb(217 70 239 / var(--tw-border-opacity));
+}.hover\:border-blue-400:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(96 165 250 / var(--tw-border-opacity));
 }.hover\:bg-white\/30:hover {
   background-color: rgb(255 255 255 / 0.3);
-}.hover\:bg-gray-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}.hover\:bg-red-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}.hover\:bg-gray-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }.hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}.hover\:bg-gray-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }.hover\:bg-transparent:hover {
   background-color: transparent;
+}.hover\:bg-red-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}.hover\:bg-blue-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity));
 }.hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }.hover\:text-gray-400:hover {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}.hover\:text-gray-900:hover {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}.hover\:text-gray-700:hover {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }.hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
+}.hover\:text-gray-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }.hover\:text-fuchsia-500:hover {
   --tw-text-opacity: 1;
   color: rgb(217 70 239 / var(--tw-text-opacity));
+}.hover\:text-gray-900:hover {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }.hover\:opacity-75:hover {
   opacity: 0.75;
 }.hover\:shadow-none:hover {
@@ -1472,27 +1479,27 @@ video {
 }.focus\:border-gray-300:focus {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}.focus\:bg-gray-700:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}.focus\:bg-gray-100:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }.focus\:bg-indigo-100:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(224 231 255 / var(--tw-bg-opacity));
 }.focus\:bg-gray-50:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}.focus\:text-gray-700:focus {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+}.focus\:bg-gray-100:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}.focus\:bg-gray-700:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }.focus\:text-indigo-800:focus {
   --tw-text-opacity: 1;
   color: rgb(55 48 163 / var(--tw-text-opacity));
 }.focus\:text-gray-800:focus {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
+}.focus\:text-gray-700:focus {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }.focus\:text-gray-500:focus {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1532,12 +1539,12 @@ video {
 }.active\:bg-gray-900:active {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}.active\:bg-red-700:active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }.active\:bg-fuchsia-500:active {
   --tw-bg-opacity: 1;
   background-color: rgb(217 70 239 / var(--tw-bg-opacity));
+}.active\:bg-red-700:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }.active\:text-gray-700:active {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -1567,12 +1574,12 @@ video {
     --tw-bg-opacity: 1;
     background-color: rgb(17 24 39 / var(--tw-bg-opacity));
   }
-}@media (min-width: 640px) {.sm\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }.sm\:-my-px {
+}@media (min-width: 640px) {.sm\:-my-px {
     margin-top: -1px;
     margin-bottom: -1px;
+  }.sm\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
   }.sm\:mr-16 {
     margin-right: 4rem;
   }.sm\:mt-0 {
@@ -1585,8 +1592,6 @@ video {
     margin-left: 2.5rem;
   }.sm\:ml-6 {
     margin-left: 1.5rem;
-  }.sm\:mb-0 {
-    margin-bottom: 0px;
   }.sm\:inline {
     display: inline;
   }.sm\:flex {
@@ -1681,14 +1686,10 @@ video {
     display: block;
   }.lg\:flex {
     display: flex;
-  }.lg\:hidden {
-    display: none;
   }.lg\:w-5\/12 {
     width: 41.666667%;
   }.lg\:w-1\/2 {
     width: 50%;
-  }.lg\:w-8\/12 {
-    width: 66.666667%;
   }.lg\:flex-none {
     flex: none;
   }.lg\:basis-auto {
@@ -1724,8 +1725,6 @@ video {
     margin-bottom: 0px;
   }.xl\:ml-auto {
     margin-left: auto;
-  }.xl\:mr-12 {
-    margin-right: 3rem;
   }.xl\:hidden {
     display: none;
   }.xl\:w-4\/12 {
